# qtAnimationtest

./: CMakeLists.txt  Main.qml  Main.qml.autosave  README.md  main.cpp
